# cuda-kernels

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cpp_samples/: CMakeLists.txt  common.hpp  grayscale.cpp  matmul.cpp  matrixMul.cpp  matrixVectorMul.cpp  meanBlur.cpp  vectorAdd.cpp  vectorDotProduct.cpp
kernels/: CMakeLists.txt
kernels/cAPI/: grayscaleC.cu  matmulC.cu  matrixMulC.cu  matrixVectorMulC.cu  meanBlurC.cu  vectorAddC.cu  vectorDotProductC.cu
kernels/cAPI/include/: grayscaleC.hpp  matmulC.hpp  matrixMulC.hpp  meanBlurC.hpp  vectorAddC.hpp  vectorDotProductC.hpp
kernels/include/: grayscale.cuh  layerNorm.cuh  matmul.cuh  matmul_nn.cuh  matrixReduction.cuh  matrixVectorMul.cuh  meanBlur.cuh  normalization.cuh  rope.cuh  util.cuh  util_matmul.cuh  vectorAdd.cuh  vectorDotProduct.cuh
kernels/python/: CMakeLists.txt  binder.cpp
kernels/src/: grayscale.cu  matMul.cu  matmul.cu  matrixMul.cu  matrixReduction.cu  matrixVectorMul.cu  meanBlur.cu  rope.cu  vectorAdd.cu  vectorDotProduct.cu  vectorMul.cu
kernels/src/include/: grayscale.cuh  matmul.cuh  matrixMul.cuh  matrixVectorMul.cuh  meanBlur.cuh  util.cuh  vectorAdd.cuh  vectorDotProduct.cuh  vectorMul.cuh
kernels/torchAPI/: common.cuh  grayscaleTorch.cu  matmulTorch.cu  matrixMulTorch.cu  matrixVectorMulTorch.cu  meanBlurTorch.cu  tensorAddTorch.cu  tensorMulTorch.cu  vectorDotProductTorch.cu
kernels/torchAPI/include/: grayscaleTorch.hpp  matmulTorch.hpp  matrixMulTorch.hpp  matrixVectorMulTorch.hpp  meanBlurTorch.hpp  tensorAddTorch.hpp  tensorMulTorch.hpp  vectorDotProductTorch.hpp
kernelsAPIs/: CMakeLists.txt
kernelsAPIs/cAPI/: CMakeLists.txt
kernelsAPIs/cAPI/include/: grayscaleC.hpp  matrixVectorMulC.hpp  meanBlurC.hpp
kernelsAPIs/cAPI/src/: grayscaleC.cu  matmulC.cu  matrixVectorMulC.cu  meanBlurC.cu  vectorDotProductC.cu
kernelsAPIs/torchAPI/: CMakeLists.txt
kernelsAPIs/torchAPI/include/: common.cuh  grayscaleTorch.hpp  layerNormTorch.hpp  matmulNNTorch.hpp  matmulTorch.hpp  matrixReductionTorch.hpp  matrixVectorMulTorch.hpp  meanBlurTorch.hpp  normalizationTorch.hpp  ropeTorch.hpp  tensorAddTorch.hpp  tensorMulTorch.hpp
kernelsAPIs/torchAPI/python/: CMakeLists.txt  binder.cpp
kernelsAPIs/torchAPI/src/: grayscaleTorch.cu  layerNormTorch.cu  matmulNNTorch.cu  matmulTorch.cu  matrixReductionTorch.cu  matrixVectorMulTorch.cu  meanBlurTorch.cu  normalizationTorch.cu  rope.cu  vectorDotProductTorch.cu
python_samples/: grayscale.py  matrixMul.py  matrixVectorMul.py  meanBlur.py  normalization.py  rope.py  tensorAdd.py  test_grayscale.py  test_matrixMul.py  test_matrixVectorMul.py  test_meanBlur.py  test_tensorAdd.py  test_tensorMul.py  test_vectorDotProduct.py  vectorDotProduct.py
python_samples/nn/: mnist.py  models.py
python_samples/nn/util/: deterministic.py  fit.py
tests/: test_grayscale.py  test_layerNorm.py  test_matmul.py  test_matmulNN.py  test_matrixMul.py  test_matrixRowReduction.py  test_matrixVectorMul.py  test_meanBlur.py  test_normalization.py  test_rope.py  test_tensorAdd.py  test_vectorDotProduct.py
